# nrf-ota

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  ota_POC.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lint.yml  release.yml  test.yml
src/nrf_ota/: __init__.py  __main__.py  dfu.py  scan.py
tests/: conftest.py  test_dfu.py
