[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrf-ota"
version = "0.1.0"
description = "Python package for OTA updating the bootloader on nrf chips"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [
    {name = "g4bri3lDev", email = "admin@g4bri3l.de"}
]

keywords = []  # TODO: Add relevant keywords
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# TODO: Add your runtime dependencies here
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    # Uncomment if using async: "pytest-asyncio>=1.3.0",
]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.14.10"
]

[project.urls]
Homepage = "https://opendisplay.org"
Repository = "https://github.com/OpenDisplay-org/nrf-ota"
Documentation = "https://github.com/OpenDisplay-org/nrf-ota#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/nrf_ota"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Uncomment if using async tests: asyncio_mode = "auto"
